samples/_failures_safe/1761172450_b19a09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b52b5bd6.c: In function ‘main’:
./samples/SAFE/__tmp_b52b5bd6.c:135:82: error: expected ‘]’ at end of input
  135 |         printf("%s [%s] %s\n", entries[i].timestamp, level_names[entries[i].level
      |                                                                                  ^
      |                                                                                  ]
./samples/SAFE/__tmp_b52b5bd6.c:135:9: error: expected declaration or statement at end of input
  135 |         printf("%s [%s] %s\n", entries[i].timestamp, level_names[entries[i].level
      |         ^~~~~~
./samples/SAFE/__tmp_b52b5bd6.c:135:9: error: expected declaration or statement at end of input
